--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="185dp"
             android:layout_gravity="center"
-            android:text="Maybe a logo?!" />
-        <android.support.v4.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:src="@drawable/without_background" />
         <EditText
-            android:layout_marginTop="70dp"
             android:id="@+id/usernameInput"
             android:layout_width="match_parent"
             android:layout_height="60dp"
