Maybe possibly final product?

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:text="@string/signIn"
-            android:onClick="openPage"
+            android:onClick="signIn"
             android:background="@color/colorAccent"/>
         <android.support.v4.widget.Space
             android:layout_width="match_parent"
